# math-rs

./: Cargo.toml  README.md  ci.Dockerfile  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
src/: axis_angle.rs  bindings.rs  lib.rs  matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  point2d.rs  point2d_test.rs  point3d.rs  point3d_test.rs  pose2d.rs  pose3d.rs  quaternion.rs  rotation_matrix2x2.rs  rotation_matrix2x2_test.rs  rotation_matrix3x3.rs  rotation_vector.rs  vector2d.rs  vector3d.rs  vector4d.rs
